<resources>
    <string name="app_name">萨瑞工厂模式</string>
    <string name="base_info">基本信息</string>
    <string name="device_name">设备名称：</string>
    <string name="device_model">设备型号：</string>
    <string name="version">版本号：</string>
    <string name="android_version">Android版本：</string>
    <string name="ram">RAM:</string>
    <string name="rom">ROM:</string>
    <string name="battery_size">电池大小：</string>
    <string name="screen_size">屏幕尺寸：</string>
    <string name="screen_resolution">屏幕分辨率：</string>
    <string name="capture">拍照</string>
    <string name="tel_112">拨打112</string>
    <string name="item_test">单项测试</string>
    <string name="test_report">测试报告</string>
    <string name="charge_status">充电状态：</string>
    <string name="not_charge">未充电</string>
    <string name="charging">充电中</string>
    <string name="current_battery_level">当前电量：</string>
    <string name="battery_voltage">电池电压：</string>
    <string name="battery_temperature">电池温度：</string>
    <string name="title_battery_test">电池测试</string>
    <string name="title_vibration_test">振动测试</string>
    <string name="title_mic_test">麦克测试</string>
    <string name="title_headset_test">耳机测试</string>
    <string name="title_lcd_test">LCD测试</string>
    <string name="title_speaker_test">喇叭测试</string>
    <string name="title_receiver_test">听筒测试</string>
    <string name="title_camera_test">相机测试</string>
    <string name="title_flash_test">闪光灯测试</string>
    <string name="title_key_test">按键测试</string>
    <string name="pass_btn">PASS</string>
    <string name="fail_btn">FAIL</string>
    <string name="volume_up">音量上</string>
    <string name="volume_down">音量下</string>
    <string name="power_key">电源键</string>
</resources>